# Claude-RA

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: add-links.md  add-paper.md  export-bib.md  find-citing.md  new-review.md  organize.md  process-sources.md  read-next.md  scan-blogs.md  scan-notes.md  search-links.md  search.md  status.md  summarize.md  synthesize.md
LLM-Prompt-Evaluation/Claude-Notes/: questions.md
LLM-Prompt-Evaluation/Drafts/: experimental-design-report.md  literature-review.md  presentation-slides.md  references.bib
LLM-Prompt-Evaluation/References/: reading-queue.yaml  references.yaml  subtopics.yaml
Templates/Claude-Notes/: questions.md
Templates/References/: reading-queue.yaml  references.yaml  subtopics.yaml
Templates/User-Input/: README.md
custom-agent/: .env.example
custom-agent/config/: default.yaml
custom-agent/tests/: __init__.py
genAI-productivity-gains/References/: reading-queue.yaml  references.yaml  subtopics.yaml
genAI-productivity-gains/Status-Reports/: RECOMMENDED-ADDITIONS-2025-12-31.md  STATUS.md
link-dumps/: CHANGELOG.md  FINAL-PROCESSING-REPORT.md  LOCAL-FETCH-INSTRUCTIONS.md  Link dump 12-09-25.docx  Link dump Nov _ Dec 2024.docx  Link dumps (OneNote export June 2024 - Dec 2025).docx  NEW-LINKS-2025-12-31.md  PROCESSING-STATUS.md  PROCESSING-SUMMARY.md  TWITTER-REDIRECTS.md  fetch_arxiv_metadata.py  fetch_metadata_local.py  links.yaml  research-notes.md  tags.yaml  twitter-bulk-update.txt
link-dumps/notes/: addyo-llm-workflow.md  agent-laboratory.md  ai-futures-dec-2025.md  aisi-frontier-trends.md  alignment-forum-pragmatic-vision-interpretability.md  alphaxiv-sota.md  anthropic-ai-transforming-work.md  anthropic-how-ai-transforming-work.md  anthropic-language-models-know-what-they-know.md  anthropic-project-vend-2.md  arxiv-1802.01528.md  (+605 more)
templates/: reading-queue.yaml  references.yaml  subtopics.yaml
tests/: test_models.py
(+143 files in other folders)
