[project]
name = "literature-review-agent"
version = "0.2.0"
description = "An AI-powered literature review research assistant using Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Literature Review Agent Team"}
]
keywords = ["ai", "research", "literature-review", "agent", "academic", "claude-agent-sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "claude-code-sdk>=0.1.0",
    "anthropic>=0.39.0",
    "anyio>=4.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "feedparser>=6.0.0",
    "arxiv>=2.1.0",
    "semanticscholar>=0.8.0",
    "pypdf>=4.0.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.0",
    "pyyaml>=6.0.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.0",
    "markdownify>=0.12.0",
    "trafilatura>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
lit-review = "literature_review_agent.cli:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
